# 9460

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PROJECT_PLAN.md  README.md  ROADMAP.md  coverage.xml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  rfc9460_checker.py
.github/workflows/: ci.yml  deploy.yml  registry-drift.yml  scan.yml
docs/: index.html
docs/assets/css/: style.css
docs/assets/js/: charts.js  main.js
docs/data/: changes.json  history.json  latest.json
notebooks/: exploratory_analysis.ipynb
results/: rfc9460_analysis_2025-09-15_10-05-41.json  rfc9460_analysis_2025-09-15_10-07-36.json  rfc9460_analysis_2025-09-15_10-08-07.json  rfc9460_analysis_2025-09-15_10-08-38.json  rfc9460_analysis_2025-09-15_10-09-44.json  rfc9460_analysis_2025-09-15_10-10-26.json  rfc9460_analysis_2025-09-15_11-30-41.json  rfc9460_analysis_2025-09-15_12-02-27.json  rfc9460_analysis_2025-09-15_12-07-57.json  rfc9460_analysis_2025-09-16_00-24-48.json  rfc9460_analysis_2025-09-17_00-25-17.json  rfc9460_analysis_2025-09-18_00-24-22.json  rfc9460_analysis_2025-09-19_00-25-12.json  rfc9460_analysis_2025-09-20_00-24-03.json  rfc9460_analysis_2025-09-21_00-27-42.json  rfc9460_analysis_2025-09-22_00-27-46.json  rfc9460_analysis_2025-09-23_00-25-26.json  rfc9460_analysis_2025-09-24_00-25-21.json  rfc9460_analysis_2025-09-25_00-25-23.json  rfc9460_analysis_2025-09-26_00-25-11.json  rfc9460_analysis_2025-09-27_00-24-38.json  rfc9460_analysis_2025-09-28_00-28-22.json  rfc9460_analysis_2025-09-29_00-26-38.json  rfc9460_analysis_2025-09-30_00-25-48.json  rfc9460_analysis_2025-10-01_00-28-57.json  rfc9460_analysis_2025-10-02_00-24-41.json  rfc9460_analysis_2025-10-03_00-24-37.json  rfc9460_analysis_2025-10-04_00-23-36.json  rfc9460_analysis_2025-10-05_00-27-54.json  rfc9460_analysis_2025-10-06_00-25-57.json  rfc9460_analysis_2025-10-07_00-25-23.json  rfc9460_analysis_2025-10-08_00-25-10.json  rfc9460_analysis_2025-10-09_00-25-05.json  rfc9460_analysis_2025-10-10_00-25-32.json  rfc9460_analysis_2025-10-11_00-24-10.json  rfc9460_analysis_2025-10-12_00-26-49.json  rfc9460_analysis_2025-10-13_00-27-33.json  rfc9460_analysis_2025-10-14_00-25-02.json  rfc9460_analysis_2025-10-15_00-26-06.json  rfc9460_analysis_2025-10-16_00-26-30.json  (+572 more)
src/: __init__.py  cli.py  registry_codegen.py
src/analyzer/: __init__.py  metrics.py  pipeline.py  reporter.py
src/data/: __init__.py  top_websites.json
src/data/iana/: dns-svcparamkeys-2026-06-25.csv.b64  dns-svcparamkeys.json
src/rfc9460_checker/: __init__.py  _generated_svcparam_registry.py  dns_client.py  exceptions.py  models.py  parser.py  validator.py  wire.py  wire_capture.py
src/utils/: __init__.py  config.py  logging.py  tld_validator.py
tests/: __init__.py  conftest.py  dashboard_smoke.js
tests/integration/: test_checker_integration.py
tests/unit/: test_cli.py  test_dns_client.py  test_metrics.py  test_parser.py  test_pipeline.py  test_registry_codegen.py  test_validator.py  test_wire.py  test_wire_capture.py  test_wire_parser_integration.py
