[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfc9460-checker"
dynamic = ["version"]
description = "Longitudinal RFC 9460 HTTPS/SVCB adoption and validity tracker"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "David E. Weekly"},
]
keywords = ["dns", "rfc9460", "https", "svcb", "http3", "quic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking",
]

dependencies = [
    "dnspython>=2.8.0",
    "pandas>=3.0.3",
    "asyncio-throttle>=1.0.2",
    "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "flake8>=7.3.0",
    "flake8-docstrings>=1.7.0",
    "flake8-typing-imports>=1.17.0",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.6.0",
    "pip-audit>=2.10.1",
    "build>=1.5.1",
]

[project.urls]
Homepage = "https://dweekly.github.io/9460/"
Documentation = "https://dweekly.github.io/9460/"
Repository = "https://github.com/dweekly/9460"
Issues = "https://github.com/dweekly/9460/issues"

[project.scripts]
rfc9460-check = "src.cli:main"
rfc9460-pipeline = "src.analyzer.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.setuptools.package-data]
"src.data" = [
    "top_websites.json",
    "iana/*.b64",
    "iana/*.json",
]

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv.*
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = [".venv*"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
files = "src"

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "asyncio_throttle.*",
    "rich.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
minversion = "9.1"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -ra
    -q
    --strict-markers
    --doctest-modules
    --cov=src
    --cov-branch
    --cov-report=term-missing:skip-covered
    --cov-report=html
    --cov-report=xml
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "unit: marks unit tests",
    "network: marks tests that require network access",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "except ImportError:",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
